--- a/Home.css
+++ b/Home.css
@@ -20,15 +20,14 @@ div a {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 10px;
     border-bottom: 1px solid var(--Border-Lines);
 }
 .Logo {
-    text-decoration: underline;
-    font-weight: 900;
-    margin-left: 80px;
-    color: #f0ebeb;
+    width: 8%;
+    height: 10%;
+    margin-left: 100px;
 }
+
 .Person_Icon,
 .Notification_Icon,
 .Add {
