--- a/Home.css
+++ b/Home.css
@@ -72,7 +72,7 @@ div a {
 /* Side Navbar START */
 .Side_Navbar {
     padding-top: 90px;
-    margin-top: -100px;
+    margin-top: -70px;
     margin-left: 100px;
     background-color: #0B1416;
     width: 240px;
@@ -153,7 +153,7 @@ div a {
 .Label{
     font-size: 22px;
     color: #f0ebeb;
-    margin-top: 120px; 
+    margin-top: 150px; 
     margin-left: 20%; 
     width: 50%;
     border-bottom: 1px solid var(--Border-Lines); 
@@ -215,6 +215,7 @@ div a {
 }
 .widgets {
     padding: 20px;
+    margin-top: 50px;
 }
 .widgets__input{
     border: none;
@@ -235,11 +236,13 @@ div a {
 
     .Top_Navbar{
         width: 100%;
+        padding: 20px;
     }
     .Logo {
-        margin-left: 10px;
-        margin-right: 10px;
-        font-size:small;
+        margin-left: 0px;
+        margin-right: 5px;
+        width: 100px;
+        height: 60px;
     }
     .Search_Bar {
         display: contents;
@@ -263,7 +266,6 @@ div a {
     .Notification_Profile {
         display: flex;
         transform: scale(.5);
-        margin-right: 50px;
     }
     .Label{
         margin-left: 8%; 
