--- a/Home.css
+++ b/Home.css
@@ -35,6 +35,10 @@ div a {
     color: #f0ebeb;
     font-size: 40px;
 }
+.Person_Icon:hover{
+    background-color: #393A3B;
+    border-radius: 10px;
+}
 /* Top Navbar END */
 
 
@@ -65,6 +69,7 @@ div a {
     border: none;
     border-radius: 30px;
     font-size: 16px;
+    color: #f0ebeb;
 }
 /* Search Bar END */
 
