--- a/Signup.css
+++ b/Signup.css
@@ -20,7 +20,7 @@ body {
 /* Login Form END */
 
 .center h1{
-    color:#adadad ;
+    color:aliceblue ;
     text-align: center;
     padding: 20px 0;
 }
