--- a/Forum.css
+++ b/Forum.css
@@ -253,6 +253,7 @@ div a {
     
 }
 
+
 .comment-form textarea {
     width: 100%; 
     margin-bottom: 10px;
@@ -270,7 +271,7 @@ textarea::placeholder {
     color: white;
 }
 
-.comment-form button {
+.comment-form button:not(:last-child){
     width: 100px;
     padding: 10px 20px;
     margin-right: 30px;
@@ -281,6 +282,16 @@ textarea::placeholder {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+.comment-form button{
+    width: 100px;
+    padding: 10px 20px;
+    margin-right: 30px;
+    border: none;
+    border-radius: 50px;
+    background-color:#2a4149;
+    color:#f0ebeb;
+    cursor: pointer;
+}
 
 .comment-form button:hover {
     background-color: #393A3B;
@@ -289,6 +300,7 @@ textarea::placeholder {
 .display-none{
     display: none;
 }
+
 
 /* Open Forum END */
 @media screen and (max-width: 414px) and (max-height:896px) {
