--- a/Signup.css
+++ b/Signup.css
@@ -6,6 +6,15 @@ body {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
 }
+.Logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
 /* Login Form START */
 .center{
     position: absolute;
