--- a/Login.css
+++ b/Login.css
@@ -148,3 +148,8 @@ button {
     color:aliceblue
     ;
   }
+  @media screen and (max-width: 414px) and (max-height:896px) {
+    .center{
+      width: 375px;
+  }
+  }
