--- a/marketplace.css
+++ b/marketplace.css
@@ -268,11 +268,13 @@ div a {
 
     .Top_Navbar{
         width: 100%;
+        padding: 20px;
     }
     .Logo {
-        margin-left: 10px;
-        margin-right: 10px;
-        font-size:small;
+        margin-left: 0px;
+        margin-right: 5px;
+        width: 80px;
+        height: 60px;
     }
     .Search_Bar {
         display: contents;
