--- a/Forum.css
+++ b/Forum.css
@@ -210,6 +210,7 @@ div a {
     margin-left: 360px;
     display: flex;
     flex-wrap: wrap;
+    flex-direction: column;
 }
 .News_Row {
     display: flex;
@@ -253,6 +254,9 @@ div a {
     
 }
 
+.text-white{
+    color: aliceblue;
+}
 
 .comment-form textarea {
     width: 100%; 
